# algo-trading-models-practice

./: README.md  algorithmic_trading_101.ipynb  pyproject.toml
fundamentals/: algorithmic_trading_101.ipynb  blueshift_trading.py  mov_avg_cross_mom_strat.ipynb
fundamentals/src_data/: QCOM_2015_2020.csv
