[tool.poetry]
name = "algo-trading-models-practice"
version = "0.1.0"
description = ""
authors = ["Tomás Zúquete da Fonseca <t.zuquete.f@gmail.com>"]
readme = "README.md"
packages = [{include = "algo_trading_models_practice"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
ta-lib = "^0.4.26"
ipykernel = "^6.23.2"
yfinance = "^0.2.21"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
